gccida/g0/cselib_lookup
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1341:36: error: must use 'enum' tag to refer to type 'machine_mode'
cselib_val * cselib_lookup( rtx x, machine_mode mode, int create) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1347:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1397:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ? 2 : 1; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1397:48: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ? 2 : 1; 
                                               ^~~~~~~~~~~~
                                               mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1416:28: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
*htab_find_slot_with_hash( hash_table_0, x, e->value, INSERT) = e; 
                           ^~~~~~~~~~~~
                           hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1430:64: error: use of undeclared identifier 'insert_option'
slot = htab_find_slot_with_hash( hash_table_0, v12, hashval, ( insert_option)( create != 0)); 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:1430:34: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
slot = htab_find_slot_with_hash( hash_table_0, v12, hashval, ( insert_option)( create != 0)); 
                                 ^~~~~~~~~~~~
                                 hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup/src/obj/cselib.o] Error 1
